myVPC.json
{

    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "this template for creating VPC",


    
  "Parameters":{

    
    "PublicAZ": {
        "Description": "Public AZ",
        "Type": "AWS::EC2::AvailabilityZone::Name",
        "Default": "-"
    },
    
    
    "PrivateAZ": {
        "Description": "Private AZ",
        "Type": "AWS::EC2::AvailabilityZone::Name",
        "Default": "us-east-2b"
    }
    
    
    
    
    

  },
   
  "Resources":{
      
    
    "myVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "192.168.0.0/16"
      }
    },
    
    
    "myIGW": {
      "Type": "AWS::EC2::InternetGateway"
    },
    "AttachGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": 
        { "Ref": "myVPC" }
        ,
        "InternetGatewayId": { "Ref": "myIGW" }
      }
    },
    

    
    "Publicsubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": 
        { "Ref": "PublicAZ" }
        ,
        "VpcId": 
        { "Ref": "myVPC" }
        ,
        "CidrBlock": "192.168.1.0/24"
      }
    },
    

    
    "PublicRT": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": 
        { "Ref": "myVPC" }
          }
    },
    
    
    "PublicRouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": 
        { "Ref": "Publicsubnet" }
        ,
        "RouteTableId": 
        { "Ref": "PublicRT" }
        
      }
    },

    
    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": 
        { "Ref": "PublicRT" }
        ,
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": 
        { "Ref": "myIGW" }
        
      }
    },
    
    
    "PrivateSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": 
        { "Ref": "PrivateAZ" }
        ,
        "VpcId": 
        { "Ref": "myVPC" }
        ,
        "CidrBlock": "192.168.2.0/24"
      }
    },   

    
    "PrivateRT": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": 
        { "Ref": "myVPC" }
              }
    },
    
    
    "PrivateRouteTableAssoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": 
        { "Ref": "PrivateSubnet" }
        ,
        "RouteTableId": 
        { "Ref": "PrivateRT" }
        
      }
    },

    "myEIP" : {
      "Type" : "AWS::EC2::EIP"
    },

    "myNAT" : {
      "Type" : "AWS::EC2::NatGateway",
      "Properties" : {
         "AllocationId" : { "Fn::GetAtt" : ["myEIP", "AllocationId"]},
         "SubnetId" : { "Ref" : "Publicsubnet"}
        }
   },
    
   
   "PrivateRoute": {
     "Type": "AWS::EC2::Route",
     "Properties": {
       "RouteTableId": 
       { "Ref": "PrivateRT" }
       ,
       "DestinationCidrBlock": "0.0.0.0/0",
       "NatGatewayId" : { "Ref" : "myNAT" }
     }
   }
   

    

      

  },
  
  "Outputs":{
    

    
    "myVPCID" : {
      "Value" : { "Ref" : "myvpc" }
    }
    

  }


}
